<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/leaderboard_headers_and_search"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_weight="1"
	android:orientation="vertical"
	android:weightSum="2">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<androidx.appcompat.widget.SearchView
			android:id="@+id/leaderboard_search"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:queryHint="Search..." />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/leaderboard_headers"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="3.5">

		<com.google.android.material.textview.MaterialTextView
			style="@style/leaderboard_row_style"
			android:layout_width="50dp"
			android:layout_marginEnd="50dp"
			android:layout_weight="0.5"
			android:text="@string/profile_pic_header" />

		<com.google.android.material.textview.MaterialTextView
			style="@style/leaderboard_row_style"
			android:layout_weight="1"
			android:text="@string/username_header" />

		<com.google.android.material.textview.MaterialTextView
			style="@style/leaderboard_row_style"
			android:layout_weight="1"
			android:text="@string/points_header" />

		<com.google.android.material.textview.MaterialTextView
			style="@style/leaderboard_row_style"
			android:layout_weight="1"
			android:text="@string/rank_header" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/leaderboard_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/leaderboard"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		</androidx.recyclerview.widget.RecyclerView>
	</LinearLayout>
</LinearLayout>