<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<com.google.android.material.appbar.MaterialToolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/username_field"
		android:layout_width="350dp"
		android:layout_height="48dp"
		android:hint="@string/username_prompt"
		android:text=""
		android:textAlignment="viewStart"
		android:textColorHint="#546E7A"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.26" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/email_field"
		android:layout_width="350dp"
		android:layout_height="48dp"
		android:hint="@string/email_prompt"
		android:text=""
		android:textAlignment="viewStart"
		android:textColorHint="#546E7A"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.33" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/password_field"
		android:layout_width="350dp"
		android:layout_height="48dp"
		android:hint="@string/password_prompt"
		android:inputType="textPassword"
		android:text=""
		android:textAlignment="viewStart"
		android:textColorHint="#546E7A"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.4" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/login_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login_button"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.69"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.499" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/signup_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/signup_button"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.32"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.499" />

</androidx.constraintlayout.widget.ConstraintLayout>