<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".EditProfile">

	<com.google.android.material.appbar.MaterialToolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0"
		app:navigationIcon="?attr/homeAsUpIndicator"
		app:title="@string/edit_profile" />

	<com.google.android.material.imageview.ShapeableImageView
		android:id="@+id/edit_profile_pic"
		android:layout_width="108dp"
		android:layout_height="108dp"
		android:scaleType="center"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.173"
		app:shapeAppearanceOverlay="@style/profile_pic_style" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/upload_photo_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/upload_photo"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.344" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/username_change"
		android:layout_width="309dp"
		android:layout_height="48dp"
		android:layout_margin="10dp"
		android:hint="@string/username_prompt"
		android:minHeight="48dp"
		android:textColorHint="#546E7A"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.457" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/save_changes_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/save_changes"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.036"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.847" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/delete_profile_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:backgroundTint="@color/red"
		android:text="@string/delete_profile"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.964"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.847" />

</androidx.constraintlayout.widget.ConstraintLayout>