<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".DailyQuizSettings">

	<com.google.android.material.appbar.MaterialToolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:contentDescription="@string/back"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0"
		app:navigationIcon="?attr/homeAsUpIndicator"
		app:title="@string/daily_quiz_settings" />

	<LinearLayout
		android:layout_width="410dp"
		android:layout_height="660dp"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1.0">


		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/selectedTimeTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="time" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/selectTimeButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/set_time"
			android:text="@string/set_time" />

	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>