<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:weightSum="5">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:layout_weight="1"
		android:gravity="center"
		android:orientation="horizontal">

		<com.google.android.material.imageview.ShapeableImageView
			android:id="@+id/profile_pic"
			android:layout_width="108dp"
			android:layout_height="108dp"
			android:scaleType="center"
			app:shapeAppearanceOverlay="@style/profile_pic_style" />
	</LinearLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.button.MaterialButton
			android:id="@+id/edit_profile"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/edit_profile"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.208"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.0" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/fresh_start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/fresh_start_string"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.792"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="1.0" />

	</androidx.constraintlayout.widget.ConstraintLayout>


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:layout_weight="1"
		android:orientation="horizontal">

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/username_profile"
			style="@style/profile_text_style"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:layout_weight="1"
		android:orientation="horizontal">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/level"
				style="@style/profile_text_style"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<com.google.android.material.progressindicator.CircularProgressIndicator
				android:id="@+id/level_progress_circle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:indicatorColor="@color/accent_color"
				app:indicatorDirectionCircular="counterclockwise"
				app:indicatorSize="150dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintVertical_bias="0.5" />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:layout_weight="1"
		android:orientation="horizontal">

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/rank"
			style="@style/profile_text_style"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:layout_weight="1"
		android:orientation="horizontal">

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/points"
			style="@style/profile_text_style"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />

	</LinearLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.button.MaterialButton
			android:id="@+id/see_past_responses"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:text="@string/see_past_responses_button"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.5" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>